--- a/app/src/main/res/drawable/selector_button_color.xml
+++ b/app/src/main/res/drawable/selector_button_color.xml
@@ -2,18 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/colorRed" />
+            <solid android:color="@color/light_grey" />
         </shape>
     </item>
     <item android:state_selected="true">
         <shape>
-            <solid android:color="@color/colorRed" />
+            <solid android:color="@color/light_grey" />
         </shape>
     </item>
     <item android:state_selected="false">
         <shape>
-            <solid android:color="@color/white" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
-
 </selector>
