--- a/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
@@ -7,14 +7,14 @@
         android:background="@color/light_grey"
         tools:context=".controllers.activities.CreateEstateActivity">
 
-    <!-- Importation de notre Toolbar -->
+    <!--Toolbar -->
 
     <androidx.core.widget.NestedScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="59dp"
-            app:layout_constraintTop_toBottomOf="@+id/include3"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_create"
             tools:layout_editor_absoluteX="0dp">
 
 
@@ -68,7 +68,8 @@
                     app:layout_constraintEnd_toEndOf="@id/guideline"
                     app:layout_constraintStart_toStartOf="@+id/apart_number"
                     app:layout_constraintTop_toBottomOf="@+id/apart_number"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:importantForAutofill="no" />
 
             <View
                     android:id="@+id/line1"
@@ -90,17 +91,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line1" />
 
-            <TextView
-                    android:id="@+id/tvSurfaceResult"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="120dp"
-                    android:hint="@string/_0"
-                    android:textColor="@color/orange_red"
-                    app:layout_constraintStart_toEndOf="@id/tvSurface"
-                    app:layout_constraintTop_toBottomOf="@+id/line1" />
 
             <TextView
                     android:id="@+id/tvSurfaceM2"
@@ -111,7 +101,7 @@
                     android:layout_marginEnd="120dp"
                     android:text="@string/surface_m"
                     android:textColor="@android:color/black"
-                    app:layout_constraintStart_toEndOf="@id/tvSurfaceResult"
+                    app:layout_constraintStart_toEndOf="@id/tvSurface"
                     app:layout_constraintTop_toBottomOf="@+id/line1" />
 
             <EditText
@@ -125,7 +115,8 @@
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvSurface"
-                    tools:targetApi="lollipop" />
+                    tools:targetApi="lollipop"
+                    android:importantForAutofill="no" />
 
 
             <TextView
@@ -149,7 +140,8 @@
                     android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_rooms"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_rooms" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_rooms"
+                    android:importantForAutofill="no" />
 
             <TextView
                     android:id="@+id/tv_nbr_bed"
@@ -171,7 +163,8 @@
                     android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_nbr_bed"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bed" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bed"
+                    android:importantForAutofill="no" />
 
 
             <TextView
@@ -194,7 +187,8 @@
                     android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_nbr_bath"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bath" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bath"
+                    android:importantForAutofill="no" />
 
             <View
                     android:id="@+id/line3"
@@ -228,7 +222,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_address"
-                    app:layout_constraintWidth_percent="0.5" />
+                    app:layout_constraintWidth_percent="0.5"
+                    android:importantForAutofill="no" />
 
             <TextView
                     android:id="@+id/tv_city"
@@ -249,12 +244,13 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/city_example"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_city"
-                    app:layout_constraintWidth_percent="0.4" />
+                    app:layout_constraintWidth_percent="0.4"
+                    android:importantForAutofill="no" />
 
             <TextView
                     android:id="@+id/tv_postal_code"
@@ -280,7 +276,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toBottomOf="@+id/tv_postal_code"
-                    app:layout_constraintWidth_percent="0.4" />
+                    app:layout_constraintWidth_percent="0.4"
+                    android:importantForAutofill="no" />
 
             <TextView
                     android:id="@+id/tv_country"
@@ -301,12 +298,13 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/country_example"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_country"
-                    app:layout_constraintWidth_percent="0.4" />
+                    app:layout_constraintWidth_percent="0.4"
+                    android:importantForAutofill="no" />
 
 
             <TextView
@@ -331,7 +329,9 @@
                     android:padding="10dp"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toBottomOf="@+id/tv_additional_address"
-                    app:layout_constraintWidth_percent="0.45" />
+                    app:layout_constraintWidth_percent="0.45"
+                    android:importantForAutofill="no"
+                    android:inputType="text" />
 
             <View
                     android:id="@+id/line4"
@@ -393,8 +393,8 @@
 
             <CheckBox
                     android:id="@+id/checkbox_train_station"
-                    android:layout_width="116dp"
-                    android:layout_height="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="@color/colorPrimary"
                     android:text="@string/train_station"
@@ -493,7 +493,8 @@
                     android:padding="10dp"
                     android:inputType="text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_description"
+                    android:importantForAutofill="no" />
 
             <View
                     android:id="@+id/line7"
@@ -536,6 +537,7 @@
                     android:text="@string/pictures_gallery"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/image"
                     app:layout_constraintTop_toBottomOf="@id/create_picture_recycler_view" />
 
             <ImageButton
@@ -547,6 +549,7 @@
                     android:gravity="start"
                     android:src="@drawable/ic_add_a_photo_white_36dp"
                     android:text="@string/pictures_camera"
+                    android:contentDescription="@string/image"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toBottomOf="@id/create_picture_recycler_view" />
@@ -591,7 +594,8 @@
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_price" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_price"
+                    android:importantForAutofill="no" />
 
 
             <TextView
@@ -658,11 +662,12 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/name_example"
-                    android:inputType="text"
+                    android:inputType="textPersonName"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_realtor" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_realtor"
+                    android:importantForAutofill="no" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -680,7 +685,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include3"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_create"
             tools:ignore="UnusedAttribute" />
 
     <Button
@@ -697,12 +702,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <include
-            android:id="@+id/include3"
-            layout="@layout/toolbar_create"
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ToolbarTheme"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@string/create_title"
+            app:titleTextColor="@android:color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
