--- a/app/src/main/res/layout-w600dp-land/activity_detail.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_detail.xml
@@ -22,7 +22,7 @@
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-        <!-- Importation de notre Toolbar -->
+        <!--Toolbar -->
         <include
                 layout="@layout/toolbar"
                 android:layout_width="match_parent"
