--- a/app/src/main/res/layout-w600dp-land/activity_preview.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_preview.xml
@@ -25,6 +25,7 @@
             android:layout_marginStart="30dp"
             android:src="@drawable/ic_real_estate_m"
             app:layout_constraintStart_toEndOf="@+id/textView2"
+            android:contentDescription="@string/image"
             app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <ImageView
@@ -34,6 +35,7 @@
             android:layout_marginTop="40dp"
             android:src="@drawable/maisonbois"
             app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
