--- a/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
@@ -56,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="@string/detail_description"
@@ -86,7 +86,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/constraint2">
+                    app:layout_constraintTop_toBottomOf="@id/constraint2"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:layout_editor_absoluteX="0dp">
 
                 <!--surface-->
 
@@ -94,22 +96,23 @@
                         android:id="@+id/icon_surface"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginTop="20dp"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_surface_black"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_surface"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                         android:id="@+id/tv_surface"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
                         android:layout_marginTop="-2dp"
                         android:text="@string/surface"
                         android:textSize="13sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@id/icon_surface"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/icon_surface" />
 
                 <TextView
@@ -128,10 +131,10 @@
                         android:id="@+id/icon_nbr_of_rooms"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="25dp"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/ic_home_black"
+                        android:contentDescription="@string/image"
+                        app:layout_constraintStart_toStartOf="@+id/icon_surface"
                         app:layout_constraintTop_toBottomOf="@+id/text_surface" />
 
                 <TextView
@@ -162,10 +165,10 @@
                         android:id="@+id/icon_nbr_bathrooms"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="25dp"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="20dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_bathtub_black"
+                        app:layout_constraintStart_toStartOf="@+id/icon_surface"
                         app:layout_constraintTop_toBottomOf="@+id/text_nbr_of_rooms" />
 
                 <TextView
@@ -197,10 +200,10 @@
                         android:id="@+id/icon_nbr_bedrooms"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="25dp"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/ic_bed_black"
+                        android:contentDescription="@string/image"
+                        app:layout_constraintStart_toStartOf="@+id/icon_surface"
                         app:layout_constraintTop_toBottomOf="@+id/text_nbr_bathrooms" />
 
                 <TextView
@@ -221,8 +224,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
-                        android:textSize="13sp"
                         android:layout_marginBottom="10dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bedrooms" />
 
@@ -232,23 +235,23 @@
                         android:id="@+id/icon_location"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintStart_toEndOf="@+id/tv_nbr_bathrooms"
+                        android:layout_marginEnd="10dp"
+                        android:src="@drawable/ic_place_black"
+                        android:contentDescription="@string/image"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_location"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                         android:id="@+id/tv_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:layout_width="55dp"
+                        android:layout_height="16dp"
                         android:text="@string/location"
+                        android:layout_marginEnd="30dp"
                         android:textSize="13sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/text_location_num_street"
-                        app:layout_constraintHorizontal_bias="0.137"
-                        app:layout_constraintStart_toEndOf="@+id/icon_location"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                         app:layout_constraintTop_toTopOf="@+id/icon_location" />
 
                 <TextView
@@ -310,24 +313,38 @@
                 <com.google.android.gms.maps.MapView
                         android:id="@+id/detail_lite_map"
                         android:name="com.google.android.gms.maps.MapFragment"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_margin="15dp"
-                        android:maxWidth="200dp"
+                        android:layout_width="@dimen/small_map_size"
+                        android:layout_height="@dimen/small_map_size"
                         android:clickable="true"
                         android:focusable="true"
                         app:cameraZoom="17"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/text_location_num_street"
+                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                         app:layout_constraintTop_toTopOf="parent"
                         app:liteMode="true" />
 
+                <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.28" />
+
+
+                <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.55" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
