--- a/app/src/main/res/layout/estate_list_item.xml
+++ b/app/src/main/res/layout/estate_list_item.xml
@@ -16,6 +16,7 @@
             android:layout_height="150dp"
             android:src="@drawable/no_image_original"
             app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/image"
             app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.constraintlayout.widget.Barrier
