--- a/app/src/main/res/layout/fragment_mort_gage_calculator.xml
+++ b/app/src/main/res/layout/fragment_mort_gage_calculator.xml
@@ -22,7 +22,9 @@
             android:maxLength="11"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:importantForAutofill="no"
+            tools:ignore="LabelFor" />
 
 
     <TextView
@@ -53,7 +55,9 @@
             android:maxLength="10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPurchasePrice" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextPurchasePrice"
+            android:importantForAutofill="no"
+            tools:ignore="LabelFor" />
 
     <TextView
             android:id="@+id/textViewDownPaymentAmount"
@@ -81,7 +85,9 @@
             android:maxLength="5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextDownPaymentAmount" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextDownPaymentAmount"
+            android:importantForAutofill="no"
+            tools:ignore="LabelFor" />
 
     <TextView
             android:id="@+id/textViewInterestRate"
@@ -126,7 +132,7 @@
             android:max="35"
             android:progress="1"
             app:bar_color="@color/colorPrimary"
-            app:right_thumb_color="@color/colorAccent"
+            app:right_thumb_color="@color/colorRed"
             app:bar_highlight_color="@color/orange_red"
             app:corner_radius="5"
             app:layout_constraintEnd_toEndOf="parent"
