--- a/app/src/main/res/layout/picture_title_dialogue.xml
+++ b/app/src/main/res/layout/picture_title_dialogue.xml
@@ -8,10 +8,11 @@
 
     <EditText
             android:id="@+id/dialogNameEt"
-            android:hint="Enter Name"
+            android:hint="@string/enter_name"
             android:inputType="textPersonName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:importantForAutofill="no" />
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -20,7 +21,7 @@
             android:gravity="center">
         <Button
                 android:id="@+id/dialogLoginBtn"
-                android:text="Ok"
+                android:text="@string/ok"
                 style="@style/Base.Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -28,7 +29,7 @@
                 android:background="@color/colorPrimary"/>
         <Button
                 android:id="@+id/dialogCancelBtn"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 style="@style/Base.Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
