--- a/app/src/main/res/layout/activity_create_estate.xml
+++ b/app/src/main/res/layout/activity_create_estate.xml
@@ -562,10 +562,10 @@
                     android:id="@+id/tv_nbr_bed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/nbr_of_bedrooms"
                     android:textColor="@android:color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toTopOf="@+id/line8" />
 
@@ -677,9 +677,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
                     android:text="@string/nbr_of_bathrooms"
                     android:textColor="@android:color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toTopOf="@+id/line10" />
 
