--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -101,7 +101,7 @@
                     android:id="@+id/tvSurfaceMax"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/surface_tv_max"
                     android:textColor="@android:color/black"
@@ -112,7 +112,7 @@
                     android:id="@+id/tvSurfaceResultMax"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginTop="20dp"
                     android:hint="@string/_0"
                     android:textColor="@color/orange_red"
