--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,7 +10,9 @@
     <androidx.core.widget.NestedScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:focusable="true"
+            android:descendantFocusability="beforeDescendants">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_detail"
